--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,13 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-lg-3 animate__animated animate__backInLeft">
         <div class="brand">
           <h1 class="mt-2">imad</h1>
         </div>
@@ -26,22 +27,26 @@
       </div>
       <div class="col-lg-9">
         <div class="mt-5 pt-5">
-          <div class="row">
+          <div class="row animate__animated animate__backInRight">
             <div class="col-lg-8">
               <div class="">
-                <h1 class="font-weight-light sm-heading mt-5 pt-4">Imad Ahmed</h1>
-                <h1 class="bg-heading">Full-Stack Software Engineer</h1>
+                <h1 class="font-weight-light mt-5 pt-4">Imad Ahmed</h1>
+                <h2 class="font-weight-bold">Full-Stack Developer</h2>
               </div>
             </div>
             <div class="col-lg-4">
               <img class="profile-img" src="https://i.imgur.com/OKlZdN1.jpg" alt="Imad Ahmed">
             </div>
           </div>
-          <div class="mt-4">
+          <div class="mt-4 animate__animated animate__backInUp">
             <p class="p-heading">Mission-driven full stack developer with a passion for thoughtful UI design,
               collaboration, and teaching.</p>
-            <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer and to a Software Engineer — I've never stopped engaging my passion to help others and solve problems.</p>
-            <p>As a web developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.</p>
+            <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional
+              path has taken many twists and turns — from an IBMS Engineer and to a Software Engineer — I've never
+              stopped engaging my passion to help others and solve problems.</p>
+            <p>As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things,
+              and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big
+              impact at a high growth company.</p>
           </div>
         </div>
       </div>
@@ -53,6 +58,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
