--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
             <p class="p-heading">Mission-driven full stack developer with a passion for thoughtful UI design,
               collaboration, and teaching.</p>
             <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional
-              path has taken many twists and turns — from an IBMS Engineer and to a Software Engineer — I've never
+              path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never
               stopped engaging my passion to help others and solve problems.</p>
             <p>As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things,
               and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big
