--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <title>
     <%= title %>
   </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -43,10 +44,10 @@
   <div class="container">
     <section id="about">
       <div>
-        <div class="mt-5 pt-5">
+        <div>
           <div class="row animate__animated animate__backInRight">
             <div class="col-lg-8">
-              <div class="">
+              <div class="mobile-header">
                 <p class="font-weight-bold mb-0 mt-5 pt-4">Hi, my name is</p>
                 <h1 class="font-weight-light">Imad Ahmed</h1>
                 <h5 class="font-weight-bold">Full-Stack Developer</h5>
@@ -99,56 +100,68 @@
     </section>
     <section id="work">
       <div class="mt-5 pt-4 mb-5">
-        <h3 class="font-weight-bold">02 Some Things I’ve Built</h3>
-        <div class="card mt-3 mb-5">
-          <div class="row">
-            <div class="col-lg-9 m-0 p-0">
-              <img class="pr-img grey-img" src="https://i.imgur.com/baNbBEK.png" alt="kids.code.in">
+        <h3 class="font-weight-bold pb-2">02 My Work</h3>
+        <!-- <div class="card mt-3 mb-5"> -->
+        <div class="row">
+          <div class="col-lg-4 bg-card-2 m-0 p-0">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="62" class="grey-img" src="https://i.imgur.com/gvGLCGy.png">
             </div>
-            <div class="col-lg-3 bg-card-2 m-0 p-0">
-              <div class="text-center">
-                <img height="120" class="mt-5 pt-5" src="https://i.imgur.com/gvGLCGy.png">
-                <p>CODING BOOTCAMP FOR KIDS
-                  Brought to you by India’s First Coding Bootcamp
-                  The Hacking School
-                </p>
-              </div>
+          </div>
+          <div class="col-lg-4 text-center">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="62" class="grey-img"
+                src="https://res.cloudinary.com/dhznnpvlm/image/upload/c_scale,w_250/v1613830252/cs-code-in/Wof2mhd_yjup9q.png">
+            </div>
+          </div>
+          <div class="col-lg-4 bg-card-2 m-0 p-0">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="62" class="grey-img" src="https://bootcamp.code.in/static/media/bootcamp-dark.b72d8e30.png">
+            </div>
+          </div>
+
+        </div>
+        <!-- </div> -->
+
+        <!-- <div class="card mt-3 mb-5"> -->
+        <div class="row">
+          <div class="col-lg-4 m-0 p-0">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="120" class="grey-img" src="https://i.imgur.com/ICWk8Qf.png">
+            </div>
+          </div>
+          <div class="col-lg-4 bg-card-2 m-0 p-0">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="62" class="grey-img" src="https://studio.code.in/static/media/studio-dark.01e0cc1a.png">
+            </div>
+          </div>
+          <div class="col-lg-4 m-0 p-0">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="100" class="grey-img" src="https://i.imgur.com/EKxlhyS.png">
             </div>
           </div>
         </div>
+        <!-- </div> -->
 
-        <div class="card mt-3 mb-5">
-          <div class="row">
-            <div class="col-lg-9 m-0 p-0">
-              <img class="pr-img grey-img" src="https://i.imgur.com/WP0iS2T.png" alt="studio.code.in">
-            </div>
-            <div class="col-lg-3 bg-card-2-light m-0 p-0">
-              <div class="text-center">
-                <img height="120" class="mt-5 pt-5" src="https://i.imgur.com/OwuGe1F.png">
-                <p>Live Coding Performances!
-                  Experience the magic of real-time coding
-                  For live Coding interviews, Pair Programming, Code-along sessions or simply learn how to code with
-                  your buddies!
-                </p>
-              </div>
+        <!-- <div class="card mt-3 mb-5"> -->
+        <div class="row">
+          <div class="col-lg-4 m-0 p-0  bg-card-2 m-0 p-0 grey-img">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="62" src="https://i.imgur.com/vIsrGaf.png">
             </div>
           </div>
-        </div>
-
-        <div class="card mt-3 mb-5">
-          <div class="row">
-            <div class="col-lg-9 m-0 p-0">
-              <img class="pr-img grey-img" src="https://i.imgur.com/sn66yvQ.png" alt="bootcamp.code.in">
-            </div>
-            <div class="col-lg-3 bg-card-2 m-0 p-0">
-              <div class="text-center">
-                <img height="120" class="mt-5 pt-5"
-                  src="https://bootcamp.code.in/static/media/bootcamp-dark.b72d8e30.png">
-                <p>Online Program Management Platfrom For Any and All Coding Bootcamps.
-                </p>
-              </div>
+          <div class="col-lg-4">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5 grey-img">
+              <img height="62" src="https://notifyfy.com/uploads/logo/6cf04b818865676c66bd7ab5c3e3f7bf.png">
             </div>
           </div>
+          <div class="col-lg-4 m-0 p-0  bg-card-2 m-0 p-0 grey-img">
+            <div class="text-center mt-5 pt-5 mb-5 pb-5">
+              <img height="100" src="https://codingfactory.edu.au/static/media/cfwhite.c37f4c7a.png">
+
+            </div>
+          </div>
+
         </div>
         <p>...and many more</p>
       </div>
