--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-  <title>
-    <%= title %>
-  </title>
+  <title>Imad Ahmed</title>
+  <meta name="description" content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
