--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,35 @@
 
 <head>
   <title>Imad Ahmed</title>
-  <meta name="description" content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
+  <meta name="description"
+    content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+  <!-- Primary Meta Tags -->
+  <title>Imad Ahmed</title>
+  <meta name="title" content="Imad Ahmed">
+  <meta name="description"
+    content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://www.imadahmed.in/">
+  <meta property="og:title" content="Imad Ahmed">
+  <meta property="og:description"
+    content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
+  <meta property="og:image" content="https://i.imgur.com/pmlyQtD.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="http://www.imadahmed.in/">
+  <meta property="twitter:title" content="Imad Ahmed">
+  <meta property="twitter:description"
+    content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
+  <meta property="twitter:image" content="https://i.imgur.com/pmlyQtD.png">
 </head>
 
 <body>
