--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,9 +108,9 @@
             <p>I enjoy creating things that live on the internet. My interest in web development started back in 2017
               when I decided to work on my idea which taught me a lot about HTML, CSS, JavaScript!</p>
             <p>I've had the privilege of working at The Hacking School - India's first and the finest coding bootcamp as
-              a Product Developer and Instructor and code.in. My main focus these days is building accessible, inclusive
+              a Product Developer and Instructor. My main focus these days is building accessible, inclusive
               products and digital experiences at code.in.</p>
-            <p>Here are a few technologies I've been working with recently are JavaScript (ES6+), ReactJs, NodeJs,
+            <p>Here are a few technologies I've been working with recently: JavaScript (ES6+), ReactJs, NodeJs,
               MongoBD, Express, Python, React Native...</p>
           </div>
           <div class="col-lg-4">
