added google analytics

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,17 @@
   <meta property="twitter:description"
     content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
   <meta property="twitter:image" content="https://i.imgur.com/pmlyQtD.png">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRMEGGM4BT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SRMEGGM4BT');
+  </script>
+
 </head>
 
 <body>
