--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
   <meta property="og:title" content="Imad Ahmed">
   <meta property="og:description"
     content="Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching. I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from an IBMS Engineer to a Software Engineer — I've never stopped engaging my passion to help others and solve problems. As a developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.">
-  <meta property="og:image" content="https://i.imgur.com/pmlyQtD.png">
+  <meta property="og:image" content="/favicon-32x32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
